add contestants
