# app/models/contestant.rb
@@ -1,0 +1,4 @@
+class Contestant < ApplicationRecord
+    validates :name, presence: true
+    validates :gender, presence: true
+end
